<resources>
    <string name="app_name">Hiking in Tenerife</string>
    <string name="title_activity_maps">Hiking in Tenerife</string>
    <string name="MAP_TYPE" translatable="false">map_type</string>
    <string name="FILTER_LONG" translatable="false">filter_long</string>
    <string name="FILTER_DIF" translatable="false">filter_dif</string>
    <string name="FILTER_DURAC" translatable="false">filter_durac</string>

    <string name="VALUE_NAME" translatable="false">value_name</string>
    <string name="VALUE_XML_ROUTE" translatable="false">value_xml_route</string>
    <string name="VALUE_DIST" translatable="false">value_distance</string>
    <string name="VALUE_DIF" translatable="false">value_dif</string>
    <string name="VALUE_TIME" translatable="false">value_time</string>
    <string name="VALUE_ID" translatable="false">value_id</string>
    <string name="VALUE_LATLNG" translatable="false">value_latlng</string>
    <string name="VALUE_LATLNG_POS" translatable="false">value_latlng_pos</string>
    <string name="VALUE_APPROVED" translatable="false">value_approved</string>
    <string name="VALUE_IS_CONNECTED" translatable="false">value_is_connected</string>
    <string name="VALUE_ICON" translatable="false">value_icon</string>

    <string-array name="opcionLong">
        <item>All</item>
        <item>Short</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="opcionDific">
        <item>All</item>
        <item>Easy</item>
        <item>Moderate</item>
        <item>Difficult</item>
        <item>Closed</item>
    </string-array>

    <string name="desnivel">Elevation</string>
    <string name="altitud">Elevation(mt)</string>
    <string name="distancia">Distance(km)</string>

    <string name="w395">Moderate or heavy snow in area with thunder</string>
    <string name="w392">Patchy light snow in area with thunder</string>
    <string name="w389">Moderate or heavy rain in area with thunder</string>
    <string name="w386">Patchy light rain in area with thunder</string>
    <string name="w377">Moderate or heavy showers of ice pellets</string>
    <string name="w374">Light showers of ice pellets</string>
    <string name="w371">Moderate or heavy snow showers</string>
    <string name="w368">Light snow showers</string>
    <string name="w365">Moderate or heavy sleet showers</string>
    <string name="w362">Light sleet showers</string>
    <string name="w359">Torrential rain shower</string>
    <string name="w356">Moderate or heavy rain shower</string>
    <string name="w353">Light rain shower</string>
    <string name="w350">Ice pellets</string>
    <string name="w338">Heavy snow</string>
    <string name="w335">Patchy heavy snow</string>
    <string name="w332">Moderate snow</string>
    <string name="w329">Patchy moderate snow</string>
    <string name="w326">Light snow</string>
    <string name="w323">Patchy light snow</string>
    <string name="w320">Moderate or heavy sleet</string>
    <string name="w317">Light sleet</string>
    <string name="w314">Moderate or Heavy freezing rain</string>
    <string name="w311">Light freezing rain</string>
    <string name="w308">Heavy rain</string>
    <string name="w305">Heavy rain at times</string>
    <string name="w302">Moderate rain</string>
    <string name="w299">Moderate rain at times</string>
    <string name="w296">Light rain</string>
    <string name="w293">Patchy light rain</string>
    <string name="w284">Heavy freezing drizzle</string>
    <string name="w281">Freezing drizzle</string>
    <string name="w266">Light drizzle</string>
    <string name="w263">Patchy light drizzle</string>
    <string name="w260">Freezing fog</string>
    <string name="w248">Fog</string>
    <string name="w230">Blizzard</string>
    <string name="w227">Blowing snow</string>
    <string name="w200">Thundery outbreaks in nearby</string>
    <string name="w185">Patchy freezing drizzle nearby</string>
    <string name="w182">Patchy sleet nearby</string>
    <string name="w179">Patchy snow nearby</string>
    <string name="w176">Patchy rain nearby</string>
    <string name="w143">Mist</string>
    <string name="w122">Overcast</string>
    <string name="w119">Cloudy</string>
    <string name="w116">Partly Cloudy</string>
    <string name="w113">Clear/Sunny</string>
    <string name="nubosidad">CloudCover: </string>
    <string name="humedad">Humidity: </string>
    <string name="precip">Rainfall: </string>
    <string name="presion">Pressure: </string>
    <string name="windDirec">Direction: </string>
    <string name="windSpeed">Speed: </string>
    <string name="atmosferico">Atmospheric conditions</string>
    <string name="viento">Wind</string>
    <string name="currentCond"><u>Current conditions</u></string>
    <string name="prevision"><u>Forecast</u></string>

    <string name="nodata">No data</string>

    <string name="informacion_app">Application information</string>
    <string name="desarrollado">Developed by <i>Javier Fernández</i></string>

    <string name="selectShare">Share app with...</string>
    <string name="shareText">I hiking with "Hiking in Tenerife" for Android!</string>

    <string name="info">The Tenerife Network of Footpaths boasts three types of route:\n\n
    ►<b> Long-distance Footpaths.</b> Identified in red and white and bearing the acronym <i>GR</i>. These long-distance routes take several days to complete, given a length of over 50 kilometres.\n\n
    ►<b> Short-distance Footpaths.</b> Identified in white and yellow and bearing the acronym <i>PR</i>. The length of these footpaths varies between 10 and 50 kilometres. A number of these routes are actually shorter that 10 kilometres; however, that have been classified as PR footpaths due to their steep gradient, which increases difficulty.\n\n
    ►<b> Local Footpaths.</b> Identified in white and green and bearing the acronym <i>SL</i>. These footpaths are less than 10 kilometres long.</string>
    <string name="tap_continue">Tap to continue</string>
    <string name="error_loading">Error loading Google Play Services, try again</string>
    <string name="quit_app">Do you want to quit the app?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="my_position">My position</string>
    <string name="error_loading_db">Error loading database</string>
    <string name="road_map">Road map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="filter">Filter</string>
    <string name="search">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="filtered">Set</string>
    <string name="longitude">Distance</string>
    <string name="time">Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="cumulative">Cumulative elevation</string>
    <string name="approved">Approved</string>
    <string name="error_my_position">My position not found, try enabling GPS!</string>
    <string name="how_to_get">How to get</string>
    <string name="description">Info</string>
    <string name="altitude">Altitude</string>
    <string name="weather">Weather</string>
    <string name="error_no_internet">Error! no internet connection</string>
    <string name="info_path">Information</string>
    <string name="info_recomendation">Advices</string>
    <string name="info_credits">Credits</string>
    <string name="selecciona_cliente">Select an email client</string>
    <string name="error_mail_client">Error, mail client not installed</string>
    <string name="contact">Contact</string>
    <string name="north_zone">North zone</string>
    <string name="south_zone">South zone</string>
    <string name="teide">Teide N. P.</string>
     <string name="info_advices">
            ► Go always accompanied and give details of your intended route to someone before setting off.\n\n
            ► Carry a mobile phone and take sufficient water and food.\n\n
            ► Clothing and footwear should correspond to the degree of difficulty of the hike.\n\n
            ► Do not stray from the sign-posted paths.\n\n
            ► Do not take plants, animals, rocks or archaeological remains with you.\n\n
            ► Do not light fires and camp only at the campsites.\n\n
            ► Do not leave or throw away rubbish.\n\n
            ► Do not make noise to alter animals.
    </string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3472935927701659/9784753320</string>
    <string name="rateit">Do you like this app? Please, take a moment to rate it. Thanks for your support!</string>
    <string name="rate">Rate it</string>
    <string name="rate_later">Later</string>
    <string name="VALUE_FIRST_TIME" translatable="false">value_first_time</string>
    <string name="today">Today,</string>
    <string name="tomorrow">Tomorrow,</string>
    <string name="KEY_WEATHER" translatable="false">4dd5f7defe860cc6cb67909a84684a3f50bc160d</string>
    <string name="next_days">Next days</string>
    <string name="get_track">Get track</string>
    <string name="file_saved">Track exported to</string>
    <string name="Base64EncodedPublicKey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtXuVHCHc8DNRgRTIsd2q2eig+eyo60kouDPyDgMcEQON2zE54Cx8NUnpQCz4cIxEiLKMfgG6dBm7PPUcYU2CCD9wT1caPbU63R/3mBvcQynmidNf0PpLdGar5XUmoxTqLCZwfNnQL5b3CU5QF5t/KhlVXiWvWNar9/Ps5naDj1Af3iTxaA2mPG4punRefhosw+gep64PUVLRK+zRaa06PqYUtBixb7kBBsEyKs9d+U9oAAX8gP6t0eoza+pa9/+JkUypmWQyWvKcGnb/idrMXHOQiN2SOPoAtWbejdrZS5P4sb3IwL3emg1SkhPjgQGui+deqC7RKoRMGAdUBOJL7QIDAQAB</string>
    <string name="back_continue">Press <i>back</i> to continue</string>
    <string name="VALUE_IS_PREMIUM" translatable="false">value_is_premium</string>
    <string name="premium_version">Premium version!</string>
    <string name="error_purchasing">Error purchasing</string>
    <string name="Press_back">Press back to continue</string>
    <string name="share">Share app</string>
    <string name="policy_text">We use device identifiers to personalise content and ads, to provide social media features and to analise our traffic. We also share such identifiers and other information from your device with our social media, advertising and analytics parners.</string>
    <string name="legal"><u>Legal information</u></string>
    <string name="app_policy">The information provided by this App is indicative. <i>Hiking in Tenerife</i> supplies this information for the convenience of users, just with informative purposes and not being responsible for the current state of the paths/trails, the offer, quality, or privacy of passing areas, etc. <i>Hiking in Tenerife</i> accepts no responsibility for any errors, omissions or a poor orientation that could cause any risk to users of this application.</string>
    <string name="invite">Invite friends</string>
    <string name="open_kml">Open the <i>.gpx</i> file</string>
    <string name="pay_text">Help me to continue developing this project donating <b>0.89 £</b>! \n \n <u>Benefits of the donation:</u> \n ► Remove ads. \n ► Download tracks in <i>.GPX</i> format, for using in other applications. \n ► Weather prevision for the next <i>3 days</i>.</string>
    <string name="price">(0.89 £)</string>
    <string name="no_thanks">No, thanks</string>
    <string name="donate">Donate!</string>
    <string name="map_mode">Map mode</string>
    <string name="on_route">Mode "On Route"</string>
    <string name="lestgo">Let\'s go!</string>
    <string name="wanttohike">Do you want to hike</string>
    <string name="invited">friends invited</string>
</resources>
