<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        >
        <ImageView
            android:id="@+id/imageLogoInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/tvInfoApp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:text="@string/title_activity_maps"
            ></TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="5dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/desarrollado"
        ></TextView>
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btContact"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:layout_gravity="center"
        android:background="@drawable/border_toast"
        ></Button>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:text="@string/legal"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_policy"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/white"
        />
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/policy_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        />
</LinearLayout>
</ScrollView>