<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_description"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/fieldDist"
                layout="@layout/field_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></include>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/fieldDific"
                layout="@layout/field_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></include>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"

        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/fieldTime"
                layout="@layout/field_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></include>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/fieldApproved"
                layout="@layout/field_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ></include>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_above="@+id/llBottomActions"
        android:background="@drawable/border"
        >
        <TextView
            android:id="@+id/tvTextDescriptor"
            android:text="@string/nodata"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <LinearLayout
        android:id="@+id/llBottomActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btAction"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_get"
            android:textColor="@android:color/white"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            />
        <Button
            android:id="@+id/btGetTrack"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_track"
            android:textColor="@android:color/white"
            android:drawableLeft="@android:drawable/ic_dialog_map"
            />
    </LinearLayout>

</RelativeLayout>