<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llWeather"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/currentCond"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/iconWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tvTemperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:layout_marginLeft="3dip"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    ></TextView>
            </LinearLayout>
            <TextView
                android:id="@+id/tvWeatherDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="5dip"
                android:textSize="15sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iconWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/viento"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dip"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iconWindDir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tvWindDirec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    ></TextView>
                <TextView
                    android:id="@+id/tvWindVeloc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dip"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/atmosferico"
                android:textStyle="bold|italic"
                />
            <TextView
                android:id="@+id/tvCloudCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginLeft="5dip"
                />
            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginLeft="5dip"
                />
            <TextView
                android:id="@+id/tvPrecip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginLeft="5dip"
                />
        </LinearLayout>
        <View
            android:id="@+id/Divider2"
            android:layout_height="fill_parent"
            android:layout_width="2dip"
            android:layout_margin="5dip"
            android:background="#BBEAB0"
            >
        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/prevision"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <ImageView
                android:id="@+id/iconWeather2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvTemperatura2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginLeft="5dip"
                android:textSize="15sp"
                ></TextView>
            <TextView
                android:id="@+id/tvWeatherDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="5dip"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tvPrecip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginLeft="5dip"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/iconWind2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/viento"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dip"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iconWindDir2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/tvWindDirec2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    ></TextView>
                <TextView
                    android:id="@+id/tvWindVeloc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dip"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>